--- a/pom.xml
+++ b/pom.xml
@@ -159,7 +159,49 @@
 
     <build>
         <plugins>
-            <plugin>
+             <plugin>
+<groupId>org.jacoco</groupId>
+<artifactId>jacoco-maven-plugin</artifactId>
+<version>0.8.13-SNAPSHOT</version>
+<executions>
+<execution>
+<id>default-prepare-agent</id>
+<goals>
+<goal>prepare-agent</goal>
+</goals>
+</execution>
+<execution>
+<id>default-report</id>
+<goals>
+<goal>report</goal>
+</goals>
+</execution>
+<execution>
+<id>default-check</id>
+<goals>
+<goal>check</goal>
+</goals>
+<configuration>
+<rules>
+<rule>
+<element>BUNDLE</element>
+<limits>
+<limit>
+<counter>COMPLEXITY</counter>
+<value>COVEREDRATIO</value>
+<minimum>0.60</minimum>
+</limit>
+</limits>
+</rule>
+</rules>
+</configuration>
+</execution>
+</executions>
+</plugin>
+		
+		
+		
+		<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.2</version>
