--- a/pom.xml
+++ b/pom.xml
@@ -430,7 +430,7 @@
                             </execution>
                             <execution>
                                 <id>report</id>
-                                <phase>verify</phase>
+                                <phase>test</phase>
                                 <goals>
                                     <goal>report</goal>
                                 </goals>
